--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
-  <head>
-    <title>featuresector Dashboard</title>
-  </head>
-  <body>
+<head>
+<title>featuresector Dashboard</title>
+</head>
+<body>
 
-   <h1>featuresector Dashboard</h1>
-     <a href="/logout">logout</a>
+	<h1>featuresector Dashboard</h1>
 
-  </body>
+	<form action="/logout" method="POST">
+		<input type="hidden" th:name="${_csrf.parameterName}"
+			th:value="${_csrf.token}" />
+		<button type="submit">Logout</button>
+	</form>
+
+</body>
 </html>
