--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<form action="" method="post">
+	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 		<fieldset>
 			<legend>Please Login</legend>
 			<!-- use param.error assuming FormLoginConfigurer#failureUrl contains the query parameter error -->
